k8s/lotto-landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lotto-landing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: landing
  template:
    metadata:
      labels:
        component: landing
    spec:
      containers:
      - name: client
        image: mrsmith9ja/lotto-landing
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            memory: "64Mi"
            cpu: "250m"
