k8s/lotto-live-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lotto-live-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: live-server
  template:
    metadata:
      labels:
        component: live-server
    spec:
      containers:
      - name: live-query-server
        image: mrsmith9ja/lotto-live-api
        ports:
          - containerPort: 3030
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            memory: "128Mi"
            cpu: "500m"
