k8s/lotto-main-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lotto-main-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: main-server
  template:
    metadata:
      labels:
        component: main-server
    spec:
      containers:
      - name: main-server
        image: mrsmith9ja/lotto-main-api
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            memory: "128Mi"
            cpu: "500m"
