k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      volumes:
        - name: mongo-db-storage
          persistentVolumeClaim:
            claimName: mongo-database-persistent-volume-claim
      containers:
      - name: mongo
        image: mvertes/alpine-mongo:4.0.3-0
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-db-storage
            mountPath: /data/mongo/db
