k8s/user-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: mrsmith9ja/lotto-user-ui
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            memory: "128Mi"
            cpu: "500m"
