k8s/live-query-redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-query-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: live-query-redis
  ports:
  - port: 6379
    targetPort: 6379
