k8s/lotto-landing-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lotto-landing-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: landing
