k8s/lotto-live-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lotto-live-query-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: live-server
  ports:
  - port: 3030
    targetPort: 3030
