k8s/lotto-main-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lotto-main-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: main-server
  ports:
    - port: 3000
      targetPort: 3000
