k8s/user-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-client-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: web
