k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - insta-lotto-naija.ml
        - www.insta-lotto-naija.ml
        - user.insta-lotto-naija.ml
        - api.insta-lotto-naija.ml
        - live.insta-lotto-naija.ml
      secretName: insta-lotto-naija-ml
  rules:
    - host: api.insta-lotto-naija.ml
      http:
        paths:
          - backend:
              serviceName: lotto-main-api-cluster-ip-service
              servicePort: 3000
    - host: live.insta-lotto-naija.ml
      http:
        paths:
          - backend:
              serviceName: lotto-live-query-api-cluster-ip-service
              servicePort: 3030
    - host: user.insta-lotto-naija.ml
      http:
        paths:
          - path: /
            backend:
                serviceName: user-client-cluster-ip-service
                servicePort: 80
    - host: insta-lotto-naija.ml
      http:
        paths:
          - path: /
            backend:
              serviceName: lotto-landing-cluster-ip-service
              servicePort: 80
    
    - host: www.insta-lotto-naija.ml
      http:
        paths:
          - path: /
            backend:
              serviceName: lotto-landing-cluster-ip-service
              servicePort: 80
